--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,28 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content></ion-content>
+<ion-header translucent="true">
+    <ion-toolbar color="tertiary">
+      <ion-title>
+        Calcula Perimetro
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content>
+      <ion-card>
+        <ion-img src="http://www.lorempixel.com/350/140/abstract"></ion-img>
+        <ion-card-header>
+          <ion-card-title>Perimetro Rectangulo</ion-card-title>
+          <ion-card-subtitle>Calcula el perimetro de un rectangulo</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-item>
+            <ion-icon name="arrow-dropright"></ion-icon>
+            <ion-input inputmode="text" placeholder="Digite base" required="true"> </ion-input>
+            <ion-icon name="arrow-dropright"></ion-icon>
+            <ion-input inputmode="text" placeholder="Digite altura" required="true"> </ion-input>
+          </ion-item>
+          <ion-button (click)="onClick()" expand="full" color="tertiary">
+            Calcular
+          </ion-button>
+        </ion-card-content>
+      </ion-card>
+  </ion-content>
